[package]
name = "cnb"
# WRN: Version will be updated by CI while create a tag, NERVER change this.
version = "0.0.0-staging"
edition = "2021"

[profile.dev]
lto = true

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0.72"
lazy_static = "1.4.0"

base64 = "0.21.2"
base64url = "0.1.0"
getrandom = { version = "0.2.10", features = ["js"] }
rand = { version = "0.8.5" }
regex = "1.8.1"
words-count = "0.1.5"

serde = { version = "1.0.177", features = ["derive"] }
serde_qs = "0.12.0"
serde_json = "1.0"
serde_with = "3.1.0"

home = "0.5.5"
chrono = "0.4.26"
mime = "0.3.17"
reqwest = { version = "0.11.16", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"

clap = { version = "4.3.19", features = ["derive", "wrap_help"] }
colored = "2.0.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
