[package]
name = "cnb"
# WRN: Version will be updated by CI while create a tag, NERVER change this.
version = "0.0.0-staging"
edition = "2021"
description = "Cnblogs' command line tool"
license = "MIT"
repository = "https://github.com/cnblogs/cli"
keywords = ["cli", "cnblogs", "blog"]
categories = ["command-line-utilities"]

[profile.dev]
lto = true
strip = true

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
base64 = "0.21.4"
base64url = "0.1.0"
getrandom = { version = "0.2.10", features = ["js"] }
rand = { version = "0.8.5" }
regex = "1.9.5"
words-count = "0.1.6"

serde = { version = "1.0.188", features = ["derive"] }
serde_qs = "0.12.0"
serde_json = "1.0.106"
serde_with = "3.3.0"

home = "0.5.5"
chrono = "0.4.30"
mime = "0.3.17"
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"

clap = { version = "4.4.2", features = ["derive", "wrap_help"] }
colored = "2.0.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
