[package]
name = "cnblogs_lib"
# WRN: Version will be updated by CI while create a tag, NERVER change this.
version = "0.0.0-dev"
edition = "2021"
description = "Cnblogs' command line tool"
license = "MIT"
repository = "https://github.com/cnblogs/cli"
keywords = ["cli", "cnblogs", "blog"]
categories = ["command-line-utilities"]
default-run = "cnb"

[profile.dev]
lto = true
strip = true

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
base64 = "0.21.4"
base64url = "0.1.0"
getrandom = { version = "0.2.10", features = ["js"] }
rand = { version = "0.8.5" }
regex = "1.9.5"
words-count = "0.1.6"
unicode-width = "0.1.10"

serde = { version = "1.0.188", features = ["derive"] }
serde_qs = "0.12.0"
serde_json = "1.0.107"
serde_with = "3.3.0"
serde_repr = "0.1.16"

home = "0.5.5"
chrono = "0.4.30"
mime = "0.3.17"
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"

clap = { version = "4.4.3", features = ["derive", "wrap_help"] }
colored = "2.0.4"
terminal_size = "0.2.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cnb"
path = "src/bin/cnb.rs"